PriorityList data member add, binarySearchAdd method add