@@ -1,12 +1,15 @@
 package priorityqueue;
 
-import java.util.ArrayList;
-
-import javax.sound.midi.MidiChannel;
+import java.util.LinkedList;
 
 public class PriorityQueue<E> extends AbstractQueue<E> {
 
 	private Object lock = new Object();
+	private LinkedList<Integer> priorityList;
+
+	public PriorityQueue() {
+		priorityList = new LinkedList<Integer>();
+	}
 
 	@Override
 	public boolean add(E obj) {
@@ -14,19 +17,20 @@ public class PriorityQueue<E> extends AbstractQueue<E> {
 		return add(obj, 1);
 	}
 
-	public boolean add(E obj, Integer priorityNumber) { // O(log n )
+	public boolean add(E obj, Integer priorityNumber) { // O(log n)
 
 		synchronized (lock) {
 
-			ArrayList<E> list = map.get(priorityNumber);
+			LinkedList<E> list = hashMap.get(priorityNumber);
 
 			if (list == null) {
-				list = new ArrayList<E>();
-				map.put(priorityNumber, list);
+				list = new LinkedList<E>();
+				hashMap.put(priorityNumber, list);
 
 			}
 
-			list.add(obj);
+			binarySearchAdd(priorityNumber, priorityList);
+			list.addLast(obj);
 
 		}
 
@@ -38,34 +42,42 @@ public class PriorityQueue<E> extends AbstractQueue<E> {
 	public E getFirst() { // O(1)
 
 		E first = null;
-		ArrayList<E> list = null;
+		LinkedList<E> list = null;
 		int minPriority;
 
 		synchronized (lock) {
 
-			Object[] keySet = map.keySet().toArray();
-			minPriority = (int) keySet[0];
-			first = map.get(minPriority).get(0);
-			remove(minPriority, first);
+			minPriority = priorityList.getFirst();
+			list = hashMap.get(minPriority);
 
+			first = list.get(0);
+			list.removeFirst();
+
+			if (list.size() == 0) {
+
+				hashMap.remove(minPriority);
+				priorityList.removeFirst();
+
+			}
 		}
 
 		return first;
 
 	}
 
-	public boolean remove(int priority, E obj) { // O(1)
+	public boolean remove(int priority, E obj) {
+		// O(log n)
 
-		ArrayList<E> list = null;
+		LinkedList<E> list = null;
 		boolean value = false;
 		synchronized (lock) {
 
-			list = map.get(priority);
+			list = hashMap.get(priority);
 			value = list.remove(obj);
 
-			if (list.size() == 0) { // if the list is empty
-									// remove the key
-				map.remove(priority);
+			if (list.size() == 0) {
+				hashMap.remove(priority);
+				priorityList.remove((Integer) priority);
 			}
 		}
 		return value;
@@ -73,10 +85,32 @@ public class PriorityQueue<E> extends AbstractQueue<E> {
 
 	public void changePriority(E oldObj, int oldPriority, E newObj, int newPriorit) {
 		// O(log n)
-		remove(oldPriority, oldObj);
 
+		remove(oldPriority, oldObj);
 		add(newObj, newPriorit);
 
 	}
 
+	public boolean binarySearchAdd(int key, LinkedList<Integer> list) {
+		// O(log n)
+		int low = 0;
+		int high = list.size() - 1;
+
+		while (high >= low) {
+			int middle = (low + high) / 2;
+			if (list.get(middle) == key) {
+				return false;
+			}
+			if (list.get(middle) < key) {
+				low = middle + 1;
+			}
+			if (list.get(middle) > key) {
+				high = middle - 1;
+			}
+		}
+
+		list.add(low, key);
+		return true;
+
+	}
 }
